Sources/ScenesShell/*compilation*
-*- mode: compilation; default-directory: "~/Projects/FhappyBird/Main/Sources/ScenesShell/" -*-
Compilation started at Fri Apr 22 23:20:09

build
Building for debugging...
[1/10] Compiling ScenesShell Ground.swift
/home/soohan-cho/Projects/FhappyBird/Main/Sources/ScenesShell/MainScene.swift:22:9: error: circular reference
    let spriteLayer = spriteLayer()
        ^
/home/soohan-cho/Projects/FhappyBird/Main/Sources/ScenesShell/MainScene.swift:22:5: note: through reference here
    let spriteLayer = spriteLayer()
    ^
/home/soohan-cho/Projects/FhappyBird/Main/Sources/ScenesShell/MainScene.swift:22:9: note: through reference here
    let spriteLayer = spriteLayer()
        ^
/home/soohan-cho/Projects/FhappyBird/Main/Sources/ScenesShell/MainScene.swift:22:9: error: circular reference
    let spriteLayer = spriteLayer()
        ^
/home/soohan-cho/Projects/FhappyBird/Main/Sources/ScenesShell/MainScene.swift:22:5: note: through reference here
    let spriteLayer = spriteLayer()
    ^
/home/soohan-cho/Projects/FhappyBird/Main/Sources/ScenesShell/MainScene.swift:22:9: note: through reference here
    let spriteLayer = spriteLayer()
        ^
[2/10] Compiling ScenesShell MainScene.swift
/home/soohan-cho/Projects/FhappyBird/Main/Sources/ScenesShell/MainScene.swift:22:5: error: circular reference
    let spriteLayer = spriteLayer()
    ^
/home/soohan-cho/Projects/FhappyBird/Main/Sources/ScenesShell/MainScene.swift:22:9: note: through reference here
    let spriteLayer = spriteLayer()
        ^
/home/soohan-cho/Projects/FhappyBird/Main/Sources/ScenesShell/MainScene.swift:22:9: note: through reference here
    let spriteLayer = spriteLayer()
        ^
[3/10] Compiling ScenesShell SpriteLibrary.swift
/home/soohan-cho/Projects/FhappyBird/Main/Sources/ScenesShell/SpriteLibrary.swift:19:15: error: property 'self.spriteLibrary' not initialized at super.init call
        super.init(name: "SpriteLibrary")
              ^
[4/10] Compiling ScenesShell Obstacle.swift
/home/soohan-cho/Projects/FhappyBird/Main/Sources/ScenesShell/Obstacle.swift:167:31: error: value of type 'MainScene' has no member 'spriteLibrary'
        spriteLibrary = scene.spriteLibrary
                        ~~~~~ ^~~~~~~~~~~~~
[5/10] Compiling ScenesShell PlayScreen.swift
/home/soohan-cho/Projects/FhappyBird/Main/Sources/ScenesShell/MainScene.swift:22:9: error: circular reference
    let spriteLayer = spriteLayer()
        ^
/home/soohan-cho/Projects/FhappyBird/Main/Sources/ScenesShell/MainScene.swift:22:5: note: through reference here
    let spriteLayer = spriteLayer()
    ^
/home/soohan-cho/Projects/FhappyBird/Main/Sources/ScenesShell/MainScene.swift:22:9: note: through reference here
    let spriteLayer = spriteLayer()
        ^
/home/soohan-cho/Projects/FhappyBird/Main/Sources/ScenesShell/MainScene.swift:22:9: error: circular reference
    let spriteLayer = spriteLayer()
        ^
/home/soohan-cho/Projects/FhappyBird/Main/Sources/ScenesShell/MainScene.swift:22:5: note: through reference here
    let spriteLayer = spriteLayer()
    ^
/home/soohan-cho/Projects/FhappyBird/Main/Sources/ScenesShell/MainScene.swift:22:9: note: through reference here
    let spriteLayer = spriteLayer()
        ^
[6/10] Compiling ScenesShell Background.swift
/home/soohan-cho/Projects/FhappyBird/Main/Sources/ScenesShell/Background.swift:92:35: error: value of type 'MainScene' has no member 'spriteLibrary'
        spriteLibrary = mainScene.spriteLibrary
                        ~~~~~~~~~ ^~~~~~~~~~~~~
error: emit-module command failed with exit code 1 (use -v to see invocation)[7/10] Compiling ScenesShell Bird.swift
/home/soohan-cho/Projects/FhappyBird/Main/Sources/ScenesShell/Bird.swift:151:35: error: value of type 'MainScene' has no member 'spriteLibrary'
        spriteLibrary = mainScene.spriteLibrary
                        ~~~~~~~~~ ^~~~~~~~~~~~~
[8/10] Emitting module ScenesShell
/home/soohan-cho/Projects/FhappyBird/Main/Sources/ScenesShell/MainScene.swift:22:5: error: circular reference
    let spriteLayer = spriteLayer()
    ^
/home/soohan-cho/Projects/FhappyBird/Main/Sources/ScenesShell/MainScene.swift:22:9: note: through reference here
    let spriteLayer = spriteLayer()
        ^
/home/soohan-cho/Projects/FhappyBird/Main/Sources/ScenesShell/MainScene.swift:22:9: note: through reference here
    let spriteLayer = spriteLayer()
        ^

Compilation exited abnormally with code 1 at Fri Apr 22 23:20:10
